--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,12 @@ jobs:
       - name: Vet
         run: |
           go vet ./...
-      - name: Lint
+  golangci:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
           version: v1.29
